--- a/src/index.css
+++ b/src/index.css
@@ -20,34 +20,47 @@ code {
 
 thead {
   padding: 5px;
-  color: white;
+  color: #D2D2D2
+;
 }
 tbody {
 
-  color: white;
+  color: #D2D2D2
+;
 }
 
 pre {
   border: 1px solid grey;
   border-radius: 10px;
   padding: 10px;
-  color: white;
+  color: #D2D2D2
+;
 }
 
 th {
   border: 1px solid grey;
   padding: 5px;
-  color: white;
+  color: #D2D2D2
+;
 }
 
 td {
   margin: 0px;
   border: 1px solid grey;
   padding: 6px;
-  color: white;
+  color: #D2D2D2;
 }
 
 table{
   border-spacing: 0px;
   border-collapse: collapse;
+}
+
+.css-83ijpv-MuiTypography-root {
+  color: #444444 !important;
+}
+
+a {
+  text-decoration: none;
+  color: #3071E7;
 }
