--- a/src/Components/Header/index.scss
+++ b/src/Components/Header/index.scss
@@ -1,10 +1,11 @@
 .header {
-  width: 100%;
+  min-width: 100%;
   display: flex;
   align-items: center;
   text-align: start;
   background-color: #20232a;
-  padding: 5px;
+  padding: 10px;
   position: fixed;
-  z-index: 1;
+  white-space:pre-wrap;
+
 }
